--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <h1>Homework module-4</h1>
     <p>go to the console, please</p>
-    <script type="module" src="./js/task-1.js" defer></script>
-    <script type="module" src="./js/task-2.js" defer></script>
-    <script type="module" src="./js/task-3.js" defer></script>
+    <script type="module" src="./js/task-1.js"></script>
+    <script type="module" src="./js/task-2.js"></script>
+    <script type="module" src="./js/task-3.js"></script>
   </body>
 </html>
